added elastic beanstalk to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 
 # Ignore ENV file
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
